@@ -4,6 +4,7 @@
   * change default directory for services from /var/service/ to /service/.
   * runsv.c: create temporary new status files for log/supervise/ actually
     in log/supervise/.
+  * doc/benefits.html: minor additions.
 
 1.8.0
 Fri, 21 Sep 2007 00:33:56 +0000
